--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,7 @@
   --switch-activo: #006400;
 }
 
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+//
 
 body{
   min-height: 100vh;
